fixed issue of gameplay video being too small

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1928,7 +1928,7 @@ input, select, textarea {
 		margin: auto;
 	}
 
-	video {
+	#vid1 {
 		width: 40%;
 		margin: auto;
 		
